# cali

./: .gitignore  Dockerfile  README.md  app.py  main.py  prompt.txt  pyproject.toml  requirements.txt  vision.py
backend/: requirements.txt
backend/scanner/: ocr.py  parser.py  pyproject.toml
backend/uploads/: inst326.docx
